--- a/Chat_P2P_EmojiList2.html
+++ b/Chat_P2P_EmojiList2.html
@@ -650,21 +650,17 @@ removeButton.addEventListener("click", () => {
     }
 });
 
-    if (excludedUsers.includes(localStorage.getItem("chatUsername"))) {
-            document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-            throw new Error("L'utilisateur est exclu"); // Arrêter l'exécution du script
-    }
-const user2 = document.getElementById("my-id").textContent; // ou innerText
-    if (excludedUsers.includes(localStorage.getItem("user2"))) {
-            document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-            throw new Error("L'utilisateur est exclu"); // Arrêter l'exécution du script
-    }
+if (excludedUsers.includes(localStorage.getItem("chatUsername")) || excludedUsers.includes(localStorage.getItem("my-id"))) {
+    document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+    throw new Error("L'utilisateur est exclu"); // Arrêter l'exécution du script
+}
+
 let lastMessageCount = 0; // Variable pour stocker le nombre de messages la dernière fois qu'ils ont été chargés
 const refreshInterval = setInterval(refreshChat, 5000); // 5000ms équivaut à 5 secondes
 
 function refreshChat() {
     // Vérifier si un nouvel utilisateur a été banni
-    if (excludedUsers.includes(localStorage.getItem("chatUsername"))) {
+    if (excludedUsers.includes(localStorage.getItem("chatUsername")) || excludedUsers.includes(localStorage.getItem("my-id"))) {
         document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
         clearInterval(refreshInterval); // Arrêtez le rafraîchissement si l'utilisateur est exclu.
         return;
@@ -672,6 +668,8 @@ function refreshChat() {
 
     loadMessages(); // Charger de nouveaux messages
 }
+
+
 function updateUserLastActive(username) {
     const userLastActive = JSON.parse(localStorage.getItem("userLastActive")) || {};
     userLastActive[username] = Date.now(); // L'heure actuelle en millisecondes
@@ -821,4 +819,3 @@ setInterval(refreshChat, 5000); // Rafraîchir le chat toutes les 5 secondes
 </body>
 
 </html>
-
