--- a/Chat_P2P_EmojiList2.html
+++ b/Chat_P2P_EmojiList2.html
@@ -260,13 +260,15 @@ peer.on('connection', function (connection) {
 function handleData(data) {
     if (data.message) {
         const decodedMessage = decodeEmojiFromURI(data.message); // Décodage du message
-    if (data.message && typeof data.message === 'string') {
+    if (data && data.message && typeof data.message === 'string') {
         const message = data.message;
         const excludeCommand = '!exclude';
         const excludeIndex = message.indexOf(excludeCommand);
 
         if (excludeIndex !== -1) {
-            const excludedUser = message.substring(excludeIndex + excludeCommand.length).trim();
+            let excludedUser = message.substring(excludeIndex + excludeCommand.length);
+            excludedUser = excludedUser.replace(/%20/g, '').replace(/%0A/g, '').trim();
+
             if (excludedUser) {
                 excludedUsers.push(excludedUser);
                 localStorage.setItem("excludedUsers", JSON.stringify(excludedUsers));
