--- a/Chat_P2P.html
+++ b/Chat_P2P.html
@@ -39,7 +39,13 @@
             position: absolute;
             background-color: white;
             z-index: 1;
+      	    left: 400px;
         }
+.emoji-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
         .emoji-container {
             display: none;
             flex-wrap: wrap;
@@ -90,6 +96,8 @@
         <div id="message-controls">
             <textarea id="message" rows="5" cols="40" placeholder="Message"></textarea>
             <button id="emoji-button">Emojis</button>
+
+<label><input type="checkbox" id="show-emojis"> Afficher les emojis</label><br>
     <div id="emojislists" style="display: none;">
 <br>
     <div id="emoji-container" class="emoji-container" onclick="openEmojiContainer(event)"></div>
@@ -500,8 +508,6 @@ let storedPeerId = localStorage.getItem('peerId');
 let peer = storedPeerId ? new Peer(storedPeerId) : new Peer();
 
 let conn = null;
-let myUsername = "VotreNom";
-        let friendUsername = "Ami";
 let screenStream = null;
 
         let onlineUsers = [];
@@ -530,43 +536,66 @@ document.body.insertBefore(userLabel, document.getElementById("messages"));
 
 const emojis = ["😀", "😃", "😄", "😁", "😆", "😅", "😂", "🤣", "😊", "😇", "🙂", "🙃", "😉", "😌", "😍", "😘", "😗", "😙", "😚", "😋", "😛", "😝", "😜", "🤪", "🤨", "🧐", "🤓", "😎", "🥸", "🤩", "🥳", "😏", "😒", "😞", "😔", "😟", "😕", "🙁", "☹️", "😣", "😖", "😫", "😩", "🥺", "😢", "😭", "😤", "😠", "😡", "🤬", "🤯", "😳", "🥵", "🥶", "😱", "😨", "😰", "😥", "😓", "🤗", "🤔", "🤭", "🤫", "🤥", "😶", "😐", "😑", "😬", "🙄", "😯", "😦", "😧", "😮", "😲", "🥱", "😴", "🤤", "😪", "😵", "🤐", "🥴", "🤢", "🤮", "🤧", "😷", "🤒", "🤕", "🤑", "🤠", "😈", "👿", "👹", "👺", "🤡", "💩", "👻", "💀", "☠️", "👽", "👾", "🤖", "🎃", "😺", "😸", "😹", "😻", "😼", "😽", "🙀", "😿", "😾", "🙈", "🙉", "🙊", "💥", "💫", "💦", "💨", "🐶", "🐺", "🦊", "🦝", "🐱", "🐭", "🐹", "🐰", "🦇", "🐻", "🐨", "🐼", "🦃", "🦆", "🦢", "🦉", "🦩", "🦚", "🦜", "🦔", "🦡", "🐔", "🐧", "🐦", "🐤", "🐣", "🐥", "🐺", "🐗", "🐴", "🦄", "🐝", "🐛", "🦋", "🐌", "🐞", "🐜", "🦗", "🕷️", "🕸️", "🦂", "🦟", "🦠", "🐢", "🐍", "🦎", "🦖", "🦕", "🐙", "🦑", "🦐", "🦞", "🦀", "🐡", "🐠", "🐟", "🐬", "🐳", "🐋", "🦈", "🐊", "🐅", "🐆", "🦓", "🦍", "🦧", "🦣", "🐘", "🦛", "🦏", "🐪", "🐫", "🦒", "🦘", "🦬", "🐃", "🐂", "🐄", "🐎", "🐖", "🦙", "🦌", "🦛", "🦘", "🦡", "🦇", "🦦", "🦥", "🦨", "🦝", "🦥", "🦦", "🦨", "🦣", "🦤", "🦥", "🦦", "🦧", "🦥", "🦤", "🦧", "🦨", "🦩", "🦚", "🦜", "🦛", "🦝", "🦣", "🦤", "🦥", "🦦", "🦧", "🦥", "🦦", "🦧", "🦨", "🦩", "🦚", "🦜", "🦝", "🦧", "🦨", "⚡", "🌩️"];
 
-        emojis.forEach(emoji => {
-            const emojiElement = document.createElement("span");
-            emojiElement.className = "emoji";
-            emojiElement.textContent = emoji;
-            emojiElement.addEventListener("click", () => insertEmoji(emoji));
-            emojiList.appendChild(emojiElement);
-        });
+const emojisContainer = document.getElementById("emojislists");
+
+// Créer un seul span pour contenir tous les emojis
+const emojiGroup = document.createElement("span");
+
+emojis.forEach((emoji, index) => {
+    // Créer un élément span pour chaque emoji
+    const emojiElement = document.createElement("span");
+    emojiElement.className = "emoji";
+    emojiElement.textContent = emoji;
+    emojiElement.addEventListener("click", () => insertEmoji(emoji));
+
+    // Ajouter l'emoji à emojiGroup
+    emojiGroup.appendChild(emojiElement);
+
+    // Ajouter un saut de ligne après chaque 10e emoji
+    if ((index + 1) % 10 === 0) {
+        emojiGroup.appendChild(document.createElement("br"));
+    }
+});
+
+// Ajouter emojiGroup à emojiList
+emojiList.appendChild(emojiGroup);
 
         emojiButton.addEventListener("click", toggleEmojiList);
 
         function toggleEmojiList() {
-    emojiContainer.style.display = emojiContainer.style.display === "flex" ? "none" : "flex";
-    if (emojiContainer.style.display === "flex") {
+    	const showEmojisCheckbox = document.getElementById("show-emojis");
+    	const isCheckboxChecked = showEmojisCheckbox.checked;
+	if(isCheckboxChecked)
+	{
+    	emojiContainer.style.display = emojiContainer.style.display === "flex" ? "none" : "flex";
+	}
+        if (emojiContainer.style.display === "flex") {
         displayEmojis();
-    }
-
-            emojislists.style.display = emojislists.style.display === "block" ? "none" : "block";
-
-            emojiList.style.display = emojiList.style.display === "block" ? "none" : "block";
         }
+        emojislists.style.display = emojislists.style.display === "block" ? "none" : "block";
+        emojiList.style.display = emojiList.style.display === "block" ? "none" : "block";
+	}
 
-peer.on('open', function (id) {
-    $("#my-id").text(id);
-    localStorage.setItem('peerId', id);
-            onlineUsers.push(id);
-            displayOnlineUsers();
-});
+	peer.on('open', function (id) {
+   	$("#my-id").text(id);
+    	localStorage.setItem('peerId', id);
+        onlineUsers.push(id);
+        displayOnlineUsers();
+	});
 
-peer.on('connection', function (connection) {
-    conn = connection;
-    conn.on('data', handleData);            
-});
+	peer.on('connection', function (connection) {
+    	conn = connection;const showEmojisCheckbox = document.getElementById("show-emojis");
+	showEmojisCheckbox.addEventListener("change", toggleEmojiList);
 
-function handleData(data) {
-    if (data.message) {
+    	conn.on('data', handleData);            
+	});
+function scrollToBottom() {
+    messages.scrollTop = messages.scrollHeight;
+}
+	function handleData(data) {
+    	if (data.message) {
         const decodedMessage = decodeEmojiFromURI(data.message); // Décodage du message
-    if (data && data.message && typeof data.message === 'string') {
+    	if (data && data.message && typeof data.message === 'string') {
         const message = decodeURIComponent(data.message); // Décodage de l'URI pour traiter les encodages
         const excludeCommand = '!exclude';
         const excludeIndex = message.indexOf(excludeCommand);
@@ -578,8 +607,8 @@ function handleData(data) {
                 excludedUsers.push(excludedUser);
                 localStorage.setItem("excludedUsers", JSON.stringify(excludedUsers));
                 console.log(`Utilisateur ${excludedUser} exclu avec succès !`);
-        messageInput.value = ''; // Videz le champ de saisie en utilisant le DOM natif
-        return;  // Ne pas envoyer le message secret aux autres
+        	messageInput.value = ''; // Videz le champ de saisie en utilisant le DOM natif
+        	return;  // Ne pas envoyer le message secret aux autres
             }
         }
     }
@@ -590,6 +619,7 @@ function handleData(data) {
     } else if (data.type === 'screenShared') {
         requestSharedScreenStream();
     }
+scrollToBottom();
 }
 function excludeUserLocally(excludedUser) {
     const excludedUsers = JSON.parse(localStorage.getItem("excludedUsers")) || [];
@@ -623,6 +653,7 @@ document.getElementById('message').addEventListener('keydown', function(event) {
         sendMessage(); // Appelle la fonction pour envoyer le message
     }
 });
+
 function sendMessage() {
     const message = messageInput.value;
 
@@ -647,18 +678,15 @@ function sendMessage() {
         saveMessage(currentUser, message);
         messageInput.value = "";
         updateUserLastActive(currentUser);
-    }
-
-conn.send(messageData);
-// Récupérer le contenu actuel du champ "Nom d'utilisateur"
-const user = document.getElementById("my-id").textContent; // ou innerText
-
-// Insérer le message avec le nom d'utilisateur dans la zone de texte "messages"
-document.getElementById("messages").value += user + ": " + message + "\n";
-
-document.getElementById("message").value = "";
-
-}
+	}
+	conn.send(messageData);
+	// Récupérer le contenu actuel du champ "Nom d'utilisateur"
+	const user = document.getElementById("my-id").textContent; // ou innerText
+	// Insérer le message avec le nom d'utilisateur dans la zone de texte "messages"
+	document.getElementById("messages").value += user + ": " + message + "\n";
+	document.getElementById("message").value = "";
+scrollToBottom();
+	}
 
         function displayOnlineUsers() {
             $('#online-users').empty();
@@ -793,6 +821,8 @@ async function unmuteMicrophone() {
 
 
         function insertEmoji(emoji) {
+    const showEmojisCheckbox = document.getElementById("show-emojis");
+    const isCheckboxChecked = showEmojisCheckbox.checked;
             messageInput.focus();
             const startPosition = messageInput.selectionStart;
             const endPosition = messageInput.selectionEnd;
@@ -800,7 +830,10 @@ async function unmuteMicrophone() {
             const textAfter = messageInput.value.substring(endPosition);
             messageInput.value = `${textBefore}${emoji}${textAfter}`;
             messageInput.setSelectionRange(startPosition + emoji.length, startPosition + emoji.length);
+	    if (!isCheckboxChecked)
+            {
             emojiList.style.display = "none";
+            }
         }
 
         function deleteConfig() {
@@ -1106,6 +1139,8 @@ function decodeEmojiFromURI(encodedEmoji) {
         }
 
         function displayEmojis() {
+    	const showEmojisCheckbox = document.getElementById("show-emojis");
+    	const isCheckboxChecked = showEmojisCheckbox.checked;
             emojiContainer.innerHTML = "";
             emojiContainer.style.display = "flex";
 
@@ -1125,7 +1160,10 @@ function decodeEmojiFromURI(encodedEmoji) {
                 emojiSpan.addEventListener("click", function(event) {
                     const selectedEmojis = emojiSpan.textContent + ' ';
                     selectedEmojisField.value += selectedEmojis;
+if (!isCheckboxChecked)
+{
                     emojiContainer.style.display = "none";
+}
                 });
                 emojiRow.appendChild(emojiSpan);
 
@@ -1156,3 +1194,4 @@ setInterval(refreshChat, 5000); // Rafraîchir le chat toutes les 5 secondes
 </body>
 
 </html>
+
